# SPL-Token-Mint

./: README.md  package-lock.json
spl-token-mint/: Anchor.toml  package-lock.json
spl-token-mint/programs/spl-token-mint/: Cargo.toml
spl-token-mint/programs/spl-token-mint/src/: lib.rs
spl-token-mint/test-keys/: admin.json  mint.json  wallet1.json  wallet2.json  wallet3.json
spl-token-mint/tests/: spl-token-mint.ts
