[package]
name = "spl-token-mint"
version = "0.1.0"
description = "SPL Token Mint Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_token_mint"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]
# Add features to resolve cfg warnings
custom-heap = []
custom-panic = []
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token"] }
# Add the missing mpl-token-metadata dependency
mpl-token-metadata = { version = "5.1.1", features = ["serde"] }